--- a/src/css/csspp.css
+++ b/src/css/csspp.css
@@ -336,3 +336,73 @@
 .font-cursive {
     font-family: cursive;
 }
+
+/* Font sizes */
+
+/* px */
+
+.font-size-25 {
+    font-size: 25px;
+}
+
+.font-size-50 {
+    font-size: 50px;
+}
+
+.font-size-75 {
+    font-size: 75px;
+}
+
+.font-size-100 {
+    font-size: 100px;
+}
+
+.font-size-125 {
+    font-size: 125px;
+}
+
+.font-size-150 {
+    font-size: 150px;
+}
+
+.font-size-175 {
+   font-size: 175px; 
+}
+
+/* rem */
+
+.font-size-1r {
+    font-size: 1rem;
+}
+
+.font-size-2r {
+    font-size: 2rem;
+}
+
+.font-size-3r {
+    font-size: 3rem;
+}
+
+.font-size-4r {
+    font-size: 4rem;
+}
+
+.font-size-5r {
+    font-size: 5rem;
+}
+
+.font-size-6r {
+    font-size: 6rem;
+}
+
+.font-size-7r {
+    font-size: 7rem;
+}
+
+.font-size-8r {
+    font-size: 8rem;
+}
+
+.font-size-9r {
+    font-size: 9rem;
+}
